# codifeed

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TASKS.md
api/: .env.example  .gitignore  Dockerfile  alembic.ini  dev.py  mise.toml  pyproject.toml  pytest.toml  railway.json  requirements.in  requirements.txt  run.py
api/.bruno/: bruno.json  collection.bru
api/.bruno/Auth/: Login.bru  Refresh.bru  Signup.bru
api/.bruno/Healthcheck/: Healthcheck GET.bru  Healthcheck POST.bru  folder.bru
api/.bruno/Posts/: Create Post.bru  Like Post.bru  Unlike Post.bru  User Posts.bru
api/.bruno/Users/: Current User (me).bru  Follow user.bru  User Followers.bru  User Profile.bru  User Search.bru
api/.bruno/environments/: PRODUCTION.bru
api/app/: __init__.py  config.py  database.py  exceptions.py  extensions.py  models.py  schemas.py
api/app/database/: engine.py  initialization.py  models.py  session.py
api/app/exceptions/: custom.py  handlers.py
api/app/extensions/: hashing.py
api/app/middlewares/: auto_refresh.py  exceptions.py  refresh_expiring_tokens.py
api/app/models/: __init__.py  auth.py  healthcheck.py  posts.py  user.py  users.py
api/app/routes/: __init__.py  auth.py  auth_routes.py  healthcheck.py  healthcheck_routes.py  post.py  post_routes.py  (+4 more)
api/fixtures/: fake_data_fixtures.py  users.py
api/migrations/: env.py  script.py.mako
api/openapi/: openapi.json
api/scripts/: ensure_fake_data.py  generate_openapi_json.py  run_prod_no_seed.py  seed_default_admin.py  seed_fake_data.py  seed_users.py  setup_test_db.sh
api/tests/: __init__.py  conftest.py  test_auth_routes.py  test_healthcheck_routes.py
(+168 files in other folders)
